--- a/templates/network/person_activity_timesheet/includes/person_activity_timesheet_inline.html
+++ b/templates/network/person_activity_timesheet/includes/person_activity_timesheet_inline.html
@@ -5,7 +5,7 @@
     </tr>
     <tr>
         <td>
-            {{ timesheet.percentage|format_percent }} 
+            {{ timesheet.percentage }}&nbsp;%
         </td>
     </tr>
     <tr>
