--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -138,7 +138,7 @@
                 <div class="mb2 col-sm-9 col-lg-10 page__content" data-summary-content>
                     <div class="page__content">
                         <div class="container">
-                            {% for event in events.object_list %}
+                            {% for event in events %}
                                 {% include 'agenda/includes/event_linecard.html' %}
                             {% endfor %}
                             {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
