[Timesheet] : add login menu + improve user menu

--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -52,6 +52,7 @@
 
 // Specific modules
 @import 'lang-switcher';
+@import 'profil-menu';
 @import 'role-switcher';
 @import 'search';
 @import 'pattern';
