--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,9 @@
                     <div class="col-md-1 col-md-push-1 tar">
                         {% include "includes/languages.html" %}
                     </div>
+                    <div class="col-md-1 col-md-push-1 tar">
+                        {% include "includes/login_logout.html" %}
+                    </div>
                 </div>
             </div>
         </div>
