--- a/templates/network/person_detail.html
+++ b/templates/network/person_detail.html
@@ -70,9 +70,11 @@
                 </figure>
             {% endif %}
         {% endwith %}
-    {% endif%}
+    {% endif %}
 
-    {% page_menu "pages/menus/person.html" %}
+    {% if user.email == person.email %}
+        {% page_menu "pages/menus/tree.html" %}
+    {% endif %}
 
 {% endblock %}
 
