--- a/templates/pages/menus/tree.html
+++ b/templates/pages/menus/tree.html
@@ -1,26 +1,37 @@
-{% load i18n pages_tags %}
+{% load i18n pages_tags organization_tags %}
 
 {% spaceless %}
 {% if page_branch_in_menu %}
-<ul class="nav nav-list navlist-menu-level-{{ branch_level }}">
-  {% for page in page_branch %}
-  {% if not has_home and page.is_primary and forloop.first %}
-  <li{% if on_home %} class="active"{% endif %} id="tree-menu-home">
-    <a href="{% url "home" %}">{% trans "Home" %}</a>
-  </li>
-  {% endif %}
-  {% if page.in_menu %}
-  <li class="
-    {% if page.is_current %} active{% endif %}
-    {% if page.is_current_or_ascendant %} active-branch{% endif %}
-    " id="tree-menu-{{ page.html_id }}">
-    <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-    {# wrap the next line with 'if page.is_current_or_ascendant' #}
-    {# to only show child pages in the menu for the current page #}
-    {% if page.has_children_in_menu %}{% page_menu page %}{% endif %}
-  </li>
-  {% endif %}
-  {% endfor %}
-</ul>
+    {% with page as current_page %}
+        {% if branch_level == 0 %}
+            {% for page in page_branch %}
+                {% if forloop.first %}
+                    <ul class="nav-tree nav-tree--level-{{ branch_level }}" data-sticky data-sticky-parent="page" data-sticky-offset="100" data-sticky-detach-at="971">
+                {% endif %}
+                {% if page.in_menu and page.has_children_in_menu %}
+                        <li class="nav-tree__item">
+                            <a class="nav-tree__link{% if page.is_current %} active{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                        </li>
+                {% endif %}
+                {% if forloop.last %}
+                    </ul>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+        {% if branch_level == 1 %}
+            {% for page in page_branch %}
+                <li class="nav-tree__item">
+                    <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %} {% if page|has_alinea %}alinea{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                    <ul class="nav-tree nav-tree--level-{{ branch_level }}">
+                        {% page_menu page %}
+                    </ul>
+                    <ul class="nav-tree" data-summary>
+                        {% include "pages/menus/current_tree_summary.html" %}
+                    </ul>
+                </li>
+            {% endfor %}
+        {% endif %}
+
+    {% endwith %}
 {% endif %}
 {% endspaceless %}
