--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -49,6 +49,7 @@
 @import 'breadcrumb';
 @import 'page';
 @import 'pagination';
+@import 'timesheet';
 
 // Specific modules
 @import 'lang-switcher';
