--- a/templates/network/person_activity_timesheet/includes/person_activity_timesheet_inline.html
+++ b/templates/network/person_activity_timesheet/includes/person_activity_timesheet_inline.html
@@ -1,5 +1,5 @@
 {% load organization_tags %}
-<table>
+<table class="timesheet-table-cell">
     <tr>
         <th>{{ timesheet.project.title }}</th>
     </tr>
