--- a/templates/network/person_activity_timesheet/person_activity_timesheet_list.html
+++ b/templates/network/person_activity_timesheet/person_activity_timesheet_list.html
@@ -4,7 +4,7 @@
 {% block meta_title %}{% trans "Timesheet" %}{% endblock %}
 
 {% block page_class %}
-    time_sheet
+    timesheet
 {% endblock %}
 
 {% block page_title %}
@@ -18,24 +18,84 @@
     {% if timesheets_by_year %}
         {% for year_k, year_v in timesheets_by_year.items %}
             <h2>{{ year_k }}</h2>
-            {% for month_k, month_v in year_v.items %}
-                <h3>{{ month_k|month_name }}</h3>
-                <table>
+            {% if year_k == current_year %}
+                <table class="timesheet-table">
                     <tr>
-                        {% for timesheet in month_v %}
+                        {% for month in months %}
                             <td>
-                                {% include "network/person_activity_timesheet/includes/person_activity_timesheet_inline.html" %}
+                                <table>
+                                    <tr>
+                                        <th class="timesheet-table-header">
+                                            <h3>{{ month|month_name }}</h3>
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            {% if month in year_v.keys %}
+                                                {% for timesheet in year_v|get_value:month %}
+                                                    {% include "network/person_activity_timesheet/includes/person_activity_timesheet_inline.html" %}
+                                                {% endfor %}
+                                            {% else %}
+                                                <a class="pull-right button wys-button-yellow" href="{% url 'organization-network-timesheet-create-view' current_year month %}" title="">Declare</a>
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                </table>
                             </td>
+
                         {% endfor %}
                     </tr>
                 </table>
-            {% endfor %}
+            {% else %}
+                <table class="timesheet-table">
+                    <tr>
+                    {% for month_k, month_v in year_v.items %}
+                        <td>
+                            <table>
+                                <tr>
+                                    <th class="timesheet-table-header">
+                                        <h3>{{ month_k|month_name }}</h3>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                    {% for timesheet in month_v %}
+                                        {% include "network/person_activity_timesheet/includes/person_activity_timesheet_inline.html" %}
+                                    {% endfor %}
+                                    </td>
+
+                                </tr>
+                            </table>
+                        </td>
+                    {% endfor %}
+                    </tr>
+                </table>
+
+            {% endif %}
         {% endfor %}
-
     {% else %}
+        <h2>{{ current_year }}</h2>
+        <table class="timesheet-table">
+            <tr>
+                {% for month in months %}
+                    <td>
+                        <table>
+                            <tr>
+                                <th class="timesheet-table-header">
+                                    <h3>{{ month|month_name }}</h3>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a class="pull-right button wys-button-yellow" href="{% url 'organization-network-timesheet-create-view' current_year month %}" title="">Declare</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
 
-        <p>{% trans "No timesheet." %}</p>
-
+                {% endfor %}
+            </tr>
+        </table>
     {% endif %}
 
 {% endblock %}
