[Timesheet] : menu under photo

--- a/static/src/sass/modules/boxes/_person-list-box.scss
+++ b/static/src/sass/modules/boxes/_person-list-box.scss
@@ -35,7 +35,7 @@ $module: ".person-list-box";
 
         }
 
-        margin: 0 auto;
+        margin:-150px auto 20px auto;
         width: 135px;
         height: 135px;
         border-radius: 135px;
