[Timesheet] : improve UI + business request

--- a/templates/network/person_activity_timesheet/includes/person_activity_timesheet_inline.html
+++ b/templates/network/person_activity_timesheet/includes/person_activity_timesheet_inline.html
@@ -1,7 +1,9 @@
 {% load organization_tags %}
 <table class="timesheet-table-cell">
     <tr>
-        <th>{{ timesheet.project.title }}</th>
+        <th>
+            <small>{{ timesheet.project.title }}</small>
+        </th>
     </tr>
     <tr>
         <td>
