--- a/static/src/sass/modules/_timesheet.scss
+++ b/static/src/sass/modules/_timesheet.scss
@@ -22,14 +22,34 @@ $module: ".timesheet";
 
 #{$module} {
 
+
     &-table {
+
+        font-size: 15px;
+
         &-header {
             background-color : $color-black;
             color : $color-white;
+            h3 {
+                font-size : 1.25em
+            }
         }
         &-cell {
             width: 100%;
             border: solid 1px $color-gray;
+            td {
+                text-align: center;
+            }
+        }
+
+        &-legend {
+            padding-top : 89px;
+            width: 108px;
+
+            table {
+                width: 108px;
+                border: solid 1px $color-gray;
+            }
         }
 
         td {
@@ -41,6 +61,6 @@ $module: ".timesheet";
             margin-left: auto;
             margin-right: auto;
         }
-    }
 
+    }
 }
