--- a/templates/network/person_detail.html
+++ b/templates/network/person_detail.html
@@ -27,6 +27,8 @@
 {% endblock %}
 
 {% block page_content %}
+    {% include "core/inc/messages.html" %}
+
     {% editable person.bio %}
         {{ person.bio|richtext_filters|safe }}
     {% endeditable %}
