--- a/templates/network/person_activity_timesheet/person_activity_timesheet_create.html
+++ b/templates/network/person_activity_timesheet/person_activity_timesheet_create.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block page_title %}
-  <h1 class="dotted">{% trans "Timesheet" %}</h1>
+  <h1 class="dotted">{% trans "Timesheet" %} - {{ month|month_name }} {{ year }}</h1>
 {% endblock %}
 
 {% block page_content %}
