--- a/templates/email/timesheet.html
+++ b/templates/email/timesheet.html
@@ -8,7 +8,7 @@
 <body>
   <p>Bonjour {{ firstname }} {{ lastname }},</p>
 <br />
-  <p>Veuillez saisir vos timesheets pour la période du <strong>{{ date_from|date:"d/m/Y" }}</strong> au <strong>{{ date_to|date:"d/m/Y" }}</strong> en cliquant sur le suivant ou en le copiant dans un navigateur :</p>
+  <p>Veuillez saisir vos timesheets pour la période du <strong>{{ date_from|date:"d/m/Y" }}</strong> au <strong>{{ date_to|date:"d/m/Y" }}</strong> en cliquant sur le lien suivant ou en le copiant dans un navigateur :</p>
   <p><a href="{{ timesheet_url }}" target="_blank">{{ timesheet_url }}</a></p>
   <br />
   <p>Bonne journée ! :)</p>
