[Event] rewrite date/time rules

--- a/static/src/sass/modules/_page.scss
+++ b/static/src/sass/modules/_page.scss
@@ -23,7 +23,7 @@ $module: ".page";
 #{$module} {
 
     min-height: 500px;
-    
+
     @include mq($until: sm) {
         min-height: 0;
     }
@@ -77,6 +77,13 @@ $module: ".page";
         font-weight: weight(heavy);
 
         span {
+            &.inline-date {
+                display: inline;
+                @include font-size(m);
+                @include line-height(1);
+                @include typeface(serif);
+                font-weight: weight(heavy);
+            }
             font-size: 13px;
             margin-top: 2px;
             font-weight: weight(regular);
