--- a/templates/agenda/includes/event_date.html
+++ b/templates/agenda/includes/event_date.html
@@ -3,11 +3,10 @@
 {# display date begin #}
 <span class="inline-date">{{ date_begin|format_date_fct_of:date_end }}</span>
 {% if not date_end or date_begin|date:"d.m.y" == date_end|date:"d.m.y" %}
-    <span class="inline-date">,</span><br>
 {% endif %}
 
 {# display date end #}
 {% if date_end and not date_begin|date:"d.m.y" == date_end|date:"d.m.y" %}
     {{ date_begin|get_separator_with:date_end }}
-    {{ date_end|date:"DATE_EVENT_FORMAT" }},<br>
+    <span class="inline-date">{{ date_end|date:"DATE_EVENT_FORMAT" }}</span>
 {% endif %}
