--- a/themes/manifeste2017/static/src/sass/layout/_header.scss
+++ b/themes/manifeste2017/static/src/sass/layout/_header.scss
@@ -27,7 +27,7 @@ $module: ".header";
 
     background: white;
     box-shadow: 0 10px 130px rgba(79,227,194,0.5);
-    position: fixed;
+    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
