--- a/themes/manifeste2017/templates/index.html
+++ b/themes/manifeste2017/templates/index.html
@@ -11,9 +11,13 @@
 {% endblock %}
 {% endspaceless %}
 
-{% block main %}
+{% block hero %}
 
     {% include "home/inc/hero.html" %}
+
+{% endblock %}
+
+{% block main %}
 
     {% include "home/inc/slider.html" %}
 
