--- a/themes/manifeste2017/templates/home/inc/hero.html
+++ b/themes/manifeste2017/templates/home/inc/hero.html
@@ -1,42 +1,58 @@
 {% load i18n pages_tags mezzanine_tags staticfiles keyword_tags event_tags organization_tags %}
 
-<div class="hero">
+<div class="hero" id="jsHero">
 
     <div class="container">
 
         <div class="row">
 
-            <div class="col-xs-7 col-xs-push-1 hero__left">
-                <img src="{% static "img/vertigo/hero-left.png" %}" />
-                <img class="hero__date" src="{% static "img/vertigo/hero-left-date.png" %}" />
+            <div class="hero__left">
+                <img alt=""src="{% static "img/manifeste2017/hero-date.png" %}" />
             </div>
 
-            <div class="col-xs-7 col-xs-push-1 hero__right">
-                <img src="{% static "img/vertigo/hero-right.png" %}" />
-
-                <p>
-
-                </p>
-            </div>
-
-        </div>
-
-        <div class="row">
-
-            <div class="col-xs-16">
-
-                <div class="hero__logo">
-                    <img src="{% static "img/vertigo/hero-logo.png" %}" />
-                </div>
-
+            <div class="hero__right">
+                <img src="{% static "img/manifeste2017/hero-right.png" %}" />
             </div>
 
         </div>
 
         <div class="hero__title">
-            <img src="{% static "img/vertigo/hero-title.png" %}" />
+            <img src="{% static "img/manifeste2017/hero-title.png" %}" />
         </div>
 
     </div>
 
 </div>
+
+<script type="text/javascript">
+
+var w=window,
+    d=document,
+    e=d.documentElement,
+    g=d.getElementsByTagName('body')[0],
+    x=w.innerWidth||e.clientWidth||g.clientWidth,
+    y=w.innerHeight||e.clientHeight||g.clientHeight;
+
+    var hero = document.getElementById('jsHero'),
+        body = document.getElementsByTagName("body")[0];
+
+    hero.style.height = y + "px";
+    body.style.position = "relative";
+    body.style.top = y + "px";
+
+    window.onresize = function() {
+
+        var w=window,
+            d=document,
+            e=d.documentElement,
+            g=d.getElementsByTagName('body')[0],
+            x=w.innerWidth||e.clientWidth||g.clientWidth,
+            y=w.innerHeight||e.clientHeight||g.clientHeight;
+
+        hero.style.height = y + "px";
+        body.style.position = "relative";
+        body.style.top = y + "px";
+
+    };
+
+</script>
