--- a/themes/manifeste2017/static/src/sass/config/_colors.scss
+++ b/themes/manifeste2017/static/src/sass/config/_colors.scss
@@ -31,10 +31,10 @@ $color-vimeo: #4bf;
 $color-youtube: #bb0000;
 
 $color-white: #FFFFFF;
-$color-main: #50E3C2;
+$color-main: #00B3D5;
 $color-gray: #C3C3C3;
-$color-black: #1D1D1B;
+$color-black: #000F24;
 $color-black-light: #343432;
 
 $color-background: #000F24;
-$color-accent: #FF203C;
+$color-accent: #00B3D5;
