--- a/themes/manifeste2017/static/src/sass/modules/_section-title.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_section-title.scss
@@ -7,7 +7,7 @@ $module: ".section-title";
     font-weight: weight(regular);
 
     text-align: center;
-    color: white;
+    color: $color-black;
     display: inline-block;
     line-height: 1.5em;
 
