--- a/themes/manifeste2017/templates/includes/social.html
+++ b/themes/manifeste2017/templates/includes/social.html
@@ -2,15 +2,19 @@
 
 <div class="section container">
 	<div class="row">
-		<div class="col-sm-8 tac">
+		<div class="col-sm-16 tac">
 			<div class="section-title section-title--uppercase section-title--underline section-title--accent">
 				{% trans "Instagram feed" %} <a class="fcw" href="https://www.instagram.com/explore/tags/ircam/" target="_blank">#ircam</a>
 			</div>
-			<div>
-				{% include "includes/instagram.html" %}
-			</div>
 		</div>
-		<div class="col-sm-6 col-sm-push-1 tac">
+	</div>
+</div>
+<div>
+	{% include "includes/instagram.html" %}
+</div>
+<div class="section container">
+	<div class="row">
+		<div class="col-sm-16 tac">
 			<div class="section-title section-title--uppercase section-title--underline section-title--main">
 				{% trans "Twitter feed" %}
 			</div>
