--- a/themes/manifeste2017/templates/home/inc/body.html
+++ b/themes/manifeste2017/templates/home/inc/body.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-sm-12 col-sm-push-2 tac">
             <div class="section-title section-title--uppercase section-title--accent">
-                Autres articles
+                à la une
             </div>
             <div class="row">
                 {% for content in home.dynamiccontenthomebody_set.all %}
