--- a/themes/manifeste2017/templates/includes/footer.html
+++ b/themes/manifeste2017/templates/includes/footer.html
@@ -5,13 +5,13 @@
 
         <div class="row">
 
-            <div class="col-xxs-16 col-sm-push-1 col-sm-4 tac">
+            <div class="col-xxs-16 col-sm-push-1 col-sm-5 tac">
 
                 <a href="{% url "home" %}" title="{% trans 'Home' %}">
                     {% with host_organization.images|get_type:"logo_footer" as images %}
                       {% if images %}
                        {% with images|first as img %}
-                        <img src="{{ MEDIA_URL }}{{ img }}" title="{{ img.title }}" width="243" />
+                        <img src="{{ MEDIA_URL }}{{ img }}" title="{{ img.title }}" width="162" />
                        {% endwith %}
                       {% endif %}
                     {% endwith %}
@@ -28,7 +28,7 @@
 
             </div>
 
-            <div class="col-xxs-16 col-sm-push-1 col-sm-10">
+            <div class="col-xxs-16 col-sm-push-1 col-sm-9">
 
                 <div class="row">
 
@@ -38,19 +38,22 @@
 
                             <div class="row">
 
-                                <div class="col-xxs-16 col-xs-7 col-xs-push-1 col-lg-8 col-lg-push-0">
+                                <div class="col-xxs-16 col-md-8">
 
                                     <div class="newsletter__text">
                                         Inscrivez-vous à notre newsletter afin de recevoir les dernières actualités,  informations sur les expositions.
                                     </div>
-                                </div>
 
-                                <div class="col-xxs-16 col-xs-7 col-xs-push-1">
-
-                                    <form method="GET" action="http://public.message-business.com/form/46711/84/form.aspx" target="_blank">
+                                    <form style="position: relative;" method="GET" action="http://public.message-business.com/form/46711/84/form.aspx" target="_blank">
                                         <input placeholder="Votre email" class="newsletter__input" type="text" name="formItem-mbtext-email" />
                                         <button class="newsletter__button" type="submit"><i class="fa fa-envelope-o"></i></button>
                                     </form>
+
+                                </div>
+
+                                <div class="col-xxs-16 col-md-7 col-md-push-1">
+
+                                    BROCHURE
 
                                 </div>
 
@@ -64,13 +67,13 @@
 
                 <div class="row">
 
-                    <div class="col-xxs-8 col-xs-7 col-xs-push-1">
+                    <div class="col-xxs-8">
 
                         {% page_menu "pages/menus/footer_vertical.html" %}
 
                     </div>
 
-                    <div class="col-xxs-8 col-xs-7 col-xs-push-1 col-lg-6 col-lg-push-2">
+                    <div class="col-xxs-8 col-md-7 col-md-push-1">
 
                         <ul class="nav-footer" role="navigation">
                             {% for link in host_organization.links.all %}
@@ -101,7 +104,7 @@
             Copyright
         {% endcomment %}
         <div class="row">
-            <div class="col-xxs-16 col-sm-14 col-sm-push-1 tac fcb mt2">
+            <div class="col-xxs-16 col-sm-14 col-sm-push-1 tac fcb mt2 fwl">
                 Copyright &copy; {% current_year %} {{ host_organization.name }}. {% trans "All rights reserved" %}.
             </div>
         </div>
