--- a/themes/manifeste2017/templates/magazine/article/article_list.html
+++ b/themes/manifeste2017/templates/magazine/article/article_list.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-16 col-md-10 col-md-push-3 tac">
-                <h1 class="section-title section-title--uppercase section-title--main section-title--underline">{% trans "News" %}</h1>
+                <h1 class="section-title section-title--big section-title--uppercase">{% trans "News" %}</h1>
             </div>
         </div>
 
@@ -39,9 +39,9 @@
             <div class="mb2 col-md-12 col-md-push-2 page__content" data-summary-content>
                 <div class="page__content">
                     <div class="container">
-                        <div class="row">
+                        <div class="row-12">
                             {% for object in objects %}
-                                <div class="col-xs-8">
+                                <div class="col-xs-4">
                                     {% with app_label=object|app_label_short classname=object|classname|lower  %}
                                         {% with app_label|add:"/"|add:classname|add:"/includes/"|add:classname|add:"_card.html" as template %}
                                             {% include template %}
