--- a/themes/manifeste2017/templates/home/inc/body.html
+++ b/themes/manifeste2017/templates/home/inc/body.html
@@ -5,9 +5,9 @@
             <div class="section-title section-title--uppercase section-title--accent">
                 à la une
             </div>
-            <div class="row">
+            <div class="row-12">
                 {% for content in home.dynamiccontenthomebody_set.all %}
-                    <div class="col-xs-8{% if forloop.counter > 3 %} hide-until-xs{% endif %}">
+                    <div class="col-xs-4{% if forloop.counter > 3 %} hide-until-xs{% endif %}">
                         {% if content.content_type.model == "brief" %}
                             {% include "magazine/brief/inc/brief_card.html" %}
                         {% elif content.content_type.model == "article" %}
