Style adjustments. Add calendar template.

--- a/themes/manifeste2017/static/src/sass/modules/_page.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_page.scss
@@ -416,8 +416,8 @@ $module: ".page";
 
         &--accent {
 
-            background-color: $color-accent;
-            color: $color-background;
+            background-color: $color-main;
+            color: $color-accent;
             text-align: center;
             font-family: $serif;
 
