--- a/themes/manifeste2017/templates/index.html
+++ b/themes/manifeste2017/templates/index.html
@@ -19,6 +19,8 @@
 
 {% block main %}
 
+    {% include "includes/calendar.html" %}
+
     {% include "home/inc/slider.html" %}
 
     {% include "home/inc/bio.html" %}
