--- a/themes/manifeste2017/static/src/sass/config/_colors.scss
+++ b/themes/manifeste2017/static/src/sass/config/_colors.scss
@@ -37,4 +37,4 @@ $color-black: #000F24;
 $color-black-light: #343432;
 
 $color-background: #000F24;
-$color-accent: #00B3D5;
+$color-accent: #48068B;
