--- a/themes/manifeste2017/templates/home/inc/body.html
+++ b/themes/manifeste2017/templates/home/inc/body.html
@@ -1,7 +1,7 @@
 {% load i18n pages_tags mezzanine_tags media_tags organization_tags %}
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-sm-push-2 tac">
+        <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2 tac">
             <div class="section-title section-title--uppercase section-title--accent">
                 à la une
             </div>
