--- a/themes/manifeste2017/templates/magazine/article/article_list.html
+++ b/themes/manifeste2017/templates/magazine/article/article_list.html
@@ -36,7 +36,7 @@
 
         <div class="row">
 
-            <div class="mb2 col-md-12 col-md-push-2 page__content" data-summary-content>
+            <div class="mb2 col-md-14 col-md-push-1 col-lg-12 col-lg-push-2 page__content" data-summary-content>
                 <div class="page__content">
                     <div class="container">
                         <div class="row-12">
